@@ -1,5 +1,5 @@
-from venusian.tests.fixtures.one import categorydecorator
-from venusian.tests.fixtures.one import categorydecorator2
+from venusian.tests.fixtures import categorydecorator
+from venusian.tests.fixtures import categorydecorator2
 
 @categorydecorator(function=True)
 def function(request): # pragma: no cover
